welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: value && is not a member of Int
	if (a-10 < (b && c) || b-10 < (a && c) || c-10 < (a && b)) {
                      ^