welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
	if (a-10 < (b && c) || b-10 < (a && c) || c-10 < (a && b)) {
		true;
	} else {
		false;
	}
}
